--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     margin-top: 100px;
     background-repeat:repeat;
     background-size:cover;
-     background-color: blue;
+    background-color: #031cfc;
      }
      .image{
     border-radius: 100px;
